package pb

import (
	"context"
	"zgoframe/protobuf/pb"
)
type FrameSync struct{}


func (frameSync *FrameSync)PlayerOperations(ctx context.Context,requestPlayerOperations *pbRequestPlayerOperations.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)PlayerResumeGame(ctx context.Context,requestPlayerResumeGame *pbRequestPlayerResumeGame.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)PlayerReady(ctx context.Context,requestPlayerReady *pbRequestPlayerReady.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)PlayerOver(ctx context.Context,requestPlayerOver *pbRequestPlayerOver.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)RoomHistory(ctx context.Context,requestRoomHistory *pbRequestRoomHistory.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)GetRoom(ctx context.Context,requestGetRoom *pbRequestGetRoom.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)PlayerMatchSign(ctx context.Context,requestPlayerMatchSign *pbRequestPlayerMatchSign.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)PlayerMatchSignCancel(ctx context.Context,requestPlayerMatchSignCancel *pbRequestPlayerMatchSignCancel.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)EnterBattle(ctx context.Context,responseEnterBattle *pbResponseEnterBattle.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)PushLogicFrame(ctx context.Context,responsePushLogicFrame *pbResponsePushLogicFrame.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)OtherPlayerOffline(ctx context.Context,responseOtherPlayerOffline *pbResponseOtherPlayerOffline.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)ReadyTimeout(ctx context.Context,responseReadyTimeout *pbResponseReadyTimeout.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)PushRoomHistory(ctx context.Context,responsePushRoomHistory *pbResponsePushRoomHistory.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)GameOver(ctx context.Context,responseGameOver *pbResponseGameOver.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)OtherPlayerResumeGame(ctx context.Context,responseOtherPlayerResumeGame *pbResponseOtherPlayerResumeGame.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)PushRoomInfo(ctx context.Context,responsePushRoomInfo *pbResponsePushRoomInfo.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)StartBattle(ctx context.Context,responseStartBattle *pbResponseStartBattle.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)OtherPlayerOver(ctx context.Context,responseOtherPlayerOver *pbResponseOtherPlayerOver.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)RestartGame(ctx context.Context,responseRestartGame *pbResponseRestartGame.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)PlayerMatchSignFailed(ctx context.Context,responsePlayerMatchSignFailed *pbResponsePlayerMatchSignFailed.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}
func (frameSync *FrameSync)PlayerMatchingFailed(ctx context.Context,responsePlayerMatchingFailed *pbResponsePlayerMatchingFailed.) (*pbEmpty.,error){
    empty := &pbEmpty.{}
    return empty,nil
}

